--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,16 @@
 <html>
     <head>
+        {% if title %}
         <title>{{ title }} - Pitches</title>
+        {% else %}
+        <title> Welcome to Pitches</title>
+        {% endif %}
     </head>
     <body>
         <h1>Hello, {{ user.username }}!</h1>
+        {% for post in posts %}
+        <div><p>{{ post.author.username }} says: <b>{{ post.body  }}</b></p></div>
+        {% endfor %}
     </body>
 </html>
     
