added base html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,16 +1,7 @@
-<html>
-    <head>
-        {% if title %}
-        <title>{{ title }} - Pitches</title>
-        {% else %}
-        <title> Welcome to Pitches</title>
-        {% endif %}
-    </head>
-    <body>
+{% extends "base.html" %}
+{% block content %}
         <h1>Hello, {{ user.username }}!</h1>
         {% for post in posts %}
-        <div><p>{{ post.author.username }} says: <b>{{ post.body  }}</b></p></div>
+        <div><p>{{ post.author.username }} says: <b>{{ post.body }}</b></p></div>
         {% endfor %}
-    </body>
-</html>
-    
+{% endblock %}
