--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,22 +1,22 @@
 <html>
     <head>
         {% if title %}
-        <title>{{ title }} - pitch</title>
+        <title>{{ title }} - Pitch</title>
         {% else %}
-        <title>pitch</title>
+        <title>Welcome to One Minute Pitch</title>
         {% endif %}
     </head>
     <body>
         <div>
-            Pitch:
+            Microblog:
             <a href="{{ url_for('index') }}">Home</a>
+            <a href="{{ url_for('explore') }}">Explore</a>
             {% if current_user.is_anonymous %}
             <a href="{{ url_for('login') }}">Login</a>
             {% else %}
             <a href="{{ url_for('user', username=current_user.username) }}">Profile</a>
             <a href="{{ url_for('logout') }}">Logout</a>
             {% endif %}
-
         </div>
         <hr>
         {% with messages = get_flashed_messages() %}
@@ -29,5 +29,5 @@
         {% endif %}
         {% endwith %}
         {% block content %}{% endblock %}
-    </body>
+  </body>
 </html>
