--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,27 +1,98 @@
-{% extends "base.html" %}
+<!DOCTYPE HTML>
 
-{% block content %}
-    <h1>Hi, {{ current_user.username }}!</h1>
-    {% if form %}
-    <form action="" method="post">
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.post.label }}<br>
-            {{ form.post(cols=32, rows=4) }}<br>
-            {% for error in form.post.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>{{ form.submit() }}</p>
-    </form>
-    {% endif %}
-    {% for post in posts %}
-        {% include 'post.html' %}
-    {% endfor %}
-    {% if prev_url %}
-    <a href="{{ prev_url }}">Newer posts</a>
-    {% endif %}
-    {% if next_url %}
-    <a href="{{ next_url }}">Older posts</a>
-    {% endif %}
-{% endblock %}
+<html>
+	<head>
+		<title>One Minute Pitch</title>
+		<!-- <link rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}"> -->
+	</head>
+	<body id="top">
+				<section id="banner" data-video="images/banner">
+					<div class="inner">
+						<header>
+							<h1>One Minute Pitch</h1>
+							<p>Here we encourage one minute men</p>
+						</header>
+						{% if current_user.is_authenticated %}
+						<div class="box">
+								
+								<div class="inner">
+										<a href="{{url_for('main.profile',uname=current_user.username)}}"class="button fit">Profile</a>
+								</div>
+							</div>
+							<div class="box">
+								
+									<div class="inner">
+										<a href="{{url_for('auth.logout')}}"  class="button style2 fit">Sign out</a>
+									</div>
+								</div>
+						{% else %}
+						<div class="box">
+								
+								<div class="inner">
+										<a href="{{url_for('auth.login')}}" class="button style2 fit">Sign in</a>
+								</div>
+							</div>
+           
+						{%endif%}
+						<a href="#main" href="{{url_for('static',filename='photos/arrow.svg')}}"class="more">View </a>
+					</div>
+                </section>
+                <div id="main">
+					<div class="inner">
+
+                    <!-- Boxes -->
+                    <h2 class="text-center">Categories</h2>
+						<div class="thumbnails">
+
+							<div class="box">
+							
+								<div class="inner">
+                      <a href="{{url_for('main.post',category='product')}}" class="button fit">Product</a>
+								</div>
+							</div>
+
+							<div class="box">
+								
+								<div class="inner">
+									<a href="{{url_for('main.post',category='pick-up')}}" class="button style2 fit">Pick Up Lines</a>
+								</div>
+							</div>
+
+							<div class="box">
+								
+								<div class="inner">
+                                    <a href="{{url_for('main.post',category='funny')}}" class="button style3 fit">Comedy</a>
+								</div>
+							</div>
+
+							<div class="box">
+								
+								<div class="inner">
+                                    <a href="{{url_for('main.post',category='cheesy')}}" class="button style2 fit">Cheesy</a>	
+								</div>
+							</div>
+
+							<div class="box">
+							
+								<div class="inner">
+                                    <a href="{{url_for('main.post',category='random')}}" class="button style3 fit"> Random</a>
+								</div>
+							</div>
+
+							<div class="box">
+								
+								<div class="inner">
+                                   
+                                    <a href="{{url_for('main.post',category='all')}}" class="button fit">All</a>
+								</div>
+							</div>
+
+						</div>
+
+					</div>
+				</div>
+
+
+
+	</body>
+</html>
