--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -5,14 +5,14 @@
 		<title>One Minute Pitch</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}">
+
 	</head>
 	<body id="top">
 				<section id="banner" data-video="images/banner">
 					<div class="inner">
 						<header>
 							<h1>One Minute Pitch</h1>
-							<p>Welcome to One Minute Pitch..... remember to always express yourself and hit the home run</p>
+							<p>We're happy with one minute men on this side</p>
 						</header>
 
 {% extends 'auth/auth_base.html'%}
