--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -54,28 +54,28 @@
 							<div class="box">
 								
 								<div class="inner">
-									<a href="{{url_for('main.post',category='pick-up')}}" class="button style2 fit">Pick Up Lines</a>
+									<a href="{{url_for('main.post',category='pick-up')}}" class="button style2 fit">Technology</a>
 								</div>
 							</div>
 
 							<div class="box">
 								
 								<div class="inner">
-                                    <a href="{{url_for('main.post',category='funny')}}" class="button style3 fit">Comedy</a>
+                                    <a href="{{url_for('main.post',category='funny')}}" class="button style3 fit">Humour</a>
 								</div>
 							</div>
 
 							<div class="box">
 								
 								<div class="inner">
-                                    <a href="{{url_for('main.post',category='cheesy')}}" class="button style2 fit">Cheesy</a>	
+                                    <a href="{{url_for('main.post',category='cheesy')}}" class="button style2 fit">Philosophy</a>	
 								</div>
 							</div>
 
 							<div class="box">
 							
 								<div class="inner">
-                                    <a href="{{url_for('main.post',category='random')}}" class="button style3 fit"> Random</a>
+                                    <a href="{{url_for('main.post',category='random')}}" class="button style3 fit">Science</a>
 								</div>
 							</div>
 
