--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,98 +1,35 @@
-<!DOCTYPE HTML>
 
-<html>
-	<head>
-		<title>One Minute Pitch</title>
-		<!-- <link rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}"> -->
-	</head>
-	<body id="top">
-				<section id="banner" data-video="images/banner">
+{% extends 'base.html'%}
+{% block content%}
+			<h1>One Minute Pitch</h1>
+			<p>The only place where it is okay to be a one minute man</p>
+		</header>
+		<hr>
+		{% if current_user.is_authenticated %}
+		<div class="box">
+				
+				<div class="inner">
+						<a href="{{url_for('main.profile',uname=current_user.username)}}"class="button fit">Profile</a>
+				</div>
+			</div>
+			<div class="box">
+				
 					<div class="inner">
-						<header>
-							<h1>One Minute Pitch</h1>
-							<p>Here we encourage one minute men</p>
-						</header>
-						{% if current_user.is_authenticated %}
-						<div class="box">
-								
-								<div class="inner">
-										<a href="{{url_for('main.profile',uname=current_user.username)}}"class="button fit">Profile</a>
-								</div>
-							</div>
-							<div class="box">
-								
-									<div class="inner">
-										<a href="{{url_for('auth.logout')}}"  class="button style2 fit">Sign out</a>
-									</div>
-								</div>
-						{% else %}
-						<div class="box">
-								
-								<div class="inner">
-										<a href="{{url_for('auth.login')}}" class="button style2 fit">Sign in</a>
-								</div>
-							</div>
-           
-						{%endif%}
-						<a href="#main" href="{{url_for('static',filename='photos/arrow.svg')}}"class="more">View </a>
-					</div>
-                </section>
-                <div id="main">
-					<div class="inner">
-
-                    <!-- Boxes -->
-                    <h2 class="text-center">Categories</h2>
-						<div class="thumbnails">
-
-							<div class="box">
-							
-								<div class="inner">
-                      <a href="{{url_for('main.post',category='product')}}" class="button fit">Product</a>
-								</div>
-							</div>
-
-							<div class="box">
-								
-								<div class="inner">
-									<a href="{{url_for('main.post',category='pick-up')}}" class="button style2 fit">Technology</a>
-								</div>
-							</div>
-
-							<div class="box">
-								
-								<div class="inner">
-                                    <a href="{{url_for('main.post',category='funny')}}" class="button style3 fit">Humour</a>
-								</div>
-							</div>
-
-							<div class="box">
-								
-								<div class="inner">
-                                    <a href="{{url_for('main.post',category='cheesy')}}" class="button style2 fit">Philosophy</a>	
-								</div>
-							</div>
-
-							<div class="box">
-							
-								<div class="inner">
-                                    <a href="{{url_for('main.post',category='random')}}" class="button style3 fit">Science</a>
-								</div>
-							</div>
-
-							<div class="box">
-								
-								<div class="inner">
-                                   
-                                    <a href="{{url_for('main.post',category='all')}}" class="button fit">All</a>
-								</div>
-							</div>
-
-						</div>
-
+						<a href="{{url_for('auth.logout')}}"  class="button style2 fit">Sign out</a>
 					</div>
 				</div>
+		{% else %}
+		<div class="box">
+				
+				<div class="inner">
+						<a href="{{url_for('auth.login')}}" class="button style2 fit">Sign in</a>
+				</div>
+			</div>
 
+		{%endif%}
+		<a href="#main" href="{{url_for('static',filename='photos/arrow.svg')}}"class="more">View </a>
+		<p>fghjkjhhjk</p>
 
-
-	</body>
-</html>
+	</div>
+</section>           
+{% endblock %}
