--- a/app/templates/new_post.html
+++ b/app/templates/new_post.html
@@ -1,12 +1,12 @@
 {% extends 'base.html'%}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block content %}
+{% block  %}
     <div class="container">
 
         <div class="col-md-8 center">
-
-            {{ wtf.quick_form(form) }}
+            <h2>Enter Pitch:</h2>
+            {{ wtf.quick_form(post_form) }}
         </div>
 
     </div>
