--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -1,5 +1,3 @@
-
-
 {% block content %}
 <head>
 		<title>One Minute Pitch</title>
@@ -12,9 +10,9 @@
 					<div class="inner">
 						<header>
 							<h1>One Minute Pitch</h1>
-							<p>Welcome to One Minute Pitch..... remember to always express yourself and hit the home run</p>
+							<p>The only place where it is okay to be a one minute man</p>
                         </header>
-                        
+                        <hr>
             {% if current_user.is_authenticated %}
             <h3> Welcome {{user.username| capitalize}}!</h3>
             <div class="box">
@@ -45,7 +43,7 @@
                         <div class="col-md-4">
                             {% if user.profile_pic_path %}
                         
-                            <img src="{{url_for('static',filename=user.profile_pic_path)}}" alt="" class="img-thumbnail" style="border-radius:50%; height: 15%; width: 15%,">
+                            <img src="{{url_for('static',filename=user.profile_pic_path)}}" alt="" class="img-thumbnail" style="height: 15%; width: 15%,">
                         
                             {%else%}
                             <p>No profile picture</p>
