--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,24 +1,8 @@
-<!DOCTYPE HTML>
-
-<html>
-	<head>
-		<title>One Minute Pitch</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-
-	</head>
-	<body id="top">
-				<section id="banner" data-video="images/banner">
-					<div class="inner">
-						<header>
-							<h1>One Minute Pitch</h1>
-							<p>Welcome to One Minute Pitch..... remember to always express yourself and hit the home run</p>
-						</header>
-{% extends 'auth/auth_base.html'%}
+{% extends 'base.html'%}
 {% import 'bootstrap/wtf.html' as wtf%}
 
 {% block content %}
-<div class="container"> 
+<div class="container">
     <div class="row">
       <div class= "col-md-2"> </div>
       <div class="col-md-8">
