--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,21 +1,4 @@
-<!DOCTYPE HTML>
-
-<html>
-	<head>
-		<title>One Minute Pitch</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-
-	</head>
-	<body id="top">
-				<section id="banner" data-video="images/banner">
-					<div class="inner">
-						<header>
-							<h1>One Minute Pitch</h1>
-							<p>We're happy with one minute men on this side</p>
-						</header>
-
-{% extends 'auth/auth_base.html'%}
+{% extends 'base.html'%}
 {% import 'bootstrap/wtf.html' as wtf%}
 
 {% block content %}
